# ca-lab3

./: .gitignore  README.md  constants.py  exception.py  golden_test.py  isa.py  machine.py  out.txt  pyproject.toml  source.txt  translate.py  translator.py
.github/workflows/: python.yml
examples/: add.txt  cat.txt  hello_user_name.txt  hello_world.txt  porb2.txt
failed_attempt/: translate.py
golden/: test_add.yml  test_cat.yml  test_hello_user_name.yml  test_hello_world.yml  test_prob2.yml
utils/: exceptions.py
